begin on nav bar

--- a/hostthedocs/templates/base.html
+++ b/hostthedocs/templates/base.html
@@ -34,6 +34,17 @@
     </style>
   </head>
   <body>
+    <nav class="navbar navbar-default">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="#">{{ title }}</a>
+            </div>
+            <ul class="nav navbar-nav">
+                <li class="active"><a href="#">Home</a></li>
+            </ul>
+        </div>
+    </nav>
+
     {% block body %}{% endblock %}
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
