embed and prefix mostly working; need to clean up and prettify

--- a/hostthedocs/templates/wrapper.html
+++ b/hostthedocs/templates/wrapper.html
@@ -2,8 +2,16 @@
 
 {% block body %}
 
-<div class="row text-center">
-    <iframe class="responsive-iframe" type="text/html" src="{{embed_url}}"></iframe>
+<style>
+    .embed {
+        height: 100%;
+    }
+</style>
+
+<div class="container-fluid embed">
+    <div class="row text-center embed">
+        <iframe class="col-xs-12 embed" type="text/html" src="{{embed_url}}"></iframe>
+    </div>
 </div>
 
 {% endblock %}
