--- a/hostthedocs/templates/base.html
+++ b/hostthedocs/templates/base.html
@@ -19,6 +19,8 @@
     <style type="text/css">
         body {
             margin-top: 50px;
+            /* height: 100%; */
+            height: 90vh;
         }
         .htd-item {
             background-color: #efefef;
@@ -40,7 +42,7 @@
                 <a class="navbar-brand" href="#">{{ title }}</a>
             </div>
             <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Home</a></li>
+                <li class="active"><a href="{{prefix}}">Home</a></li>
             </ul>
         </div>
     </nav>
