--- a/hostthedocs/templates/base.html
+++ b/hostthedocs/templates/base.html
@@ -17,10 +17,17 @@
     <![endif]-->
 
     <style type="text/css">
+        html {
+            margin: 0;
+            height: 100%;
+        }
         body {
-            margin-top: 50px;
+            /* margin-top: 50px; */
             /* height: 100%; */
-            height: 90vh;
+            margin: 0;
+            min-width: 100vw;
+            min-height: 100vh;
+            height: 100%;
         }
         .htd-item {
             background-color: #efefef;
@@ -33,21 +40,51 @@
             margin: 50px 0;
         }
 
+        .full-height {
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+            height: 100%;
+        }
+
+        .fill-height {
+            width: 100%;
+            /* height: 100%; */
+            flex-grow: 1;
+            flex-shrink: 0;
+            flex-basis: 100%;
+        }
+
+        .header {
+            height: 10%;
+        }
+
+        .content {
+            height: 90%;
+        }
+
+        .embed {
+            width: 100%;
+            height: 100%;
+            min-height: 100%;
+        }
     </style>
   </head>
-  <body>
-    <nav class="navbar navbar-default">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <a class="navbar-brand" href="#">{{ title }}</a>
+  <body class="full-height">
+    <div class="container-fluid fill-height">
+        <nav class="navbar navbar-default">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <a class="navbar-brand" href="#">{{ title }}</a>
+                </div>
+                <ul class="nav navbar-nav">
+                    <li class="active"><a href="{{prefix}}">Home</a></li>
+                </ul>
             </div>
-            <ul class="nav navbar-nav">
-                <li class="active"><a href="{{prefix}}">Home</a></li>
-            </ul>
-        </div>
-    </nav>
+        </nav>
 
-    {% block body %}{% endblock %}
+        {% block body %}{% endblock %}
+    </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
