make widths equal

--- a/hostthedocs/templates/wrapper.html
+++ b/hostthedocs/templates/wrapper.html
@@ -2,7 +2,7 @@
 
 {% block body %}
 
-<div class="container-fluid text-center content">
+<div class="text-center content">
     <iframe class="embed" type="text/html" src="{{embed_url}}"></iframe>
 </div>
 
