--- a/hostthedocs/templates/base.html
+++ b/hostthedocs/templates/base.html
@@ -55,6 +55,10 @@
             flex-basis: 100%;
         }
 
+        .w-100 {
+            width: 100%;
+        }
+
         .header {
             height: 10%;
         }
@@ -73,7 +77,7 @@
   <body class="full-height">
     <div class="container-fluid fill-height">
         <nav class="navbar navbar-default">
-            <div class="container-fluid">
+            <div class="row">
                 <div class="navbar-header">
                     <a class="navbar-brand" href="#">{{ title }}</a>
                 </div>
