--- a/hostthedocs/templates/base.html
+++ b/hostthedocs/templates/base.html
@@ -75,15 +75,17 @@
     </style>
   </head>
   <body class="full-height">
-    <div class="container-fluid fill-height">
+    <div class="fill-height">
         <nav class="navbar navbar-default">
             <div class="row">
-                <div class="navbar-header">
-                    <a class="navbar-brand" href="#">{{ title }}</a>
+                <div class="container-fluid">
+                    <div class="navbar-header">
+                        <a class="navbar-brand" href="#">{{ title }}</a>
+                    </div>
+                    <ul class="nav navbar-nav">
+                        <li class="active"><a href="{{prefix}}">Home</a></li>
+                    </ul>
                 </div>
-                <ul class="nav navbar-nav">
-                    <li class="active"><a href="{{prefix}}">Home</a></li>
-                </ul>
             </div>
         </nav>
 
