--- a/hostthedocs/templates/base.html
+++ b/hostthedocs/templates/base.html
@@ -68,6 +68,7 @@
         }
 
         .embed {
+            border: 0;
             width: 100%;
             height: 100%;
             min-height: 100%;
