--- a/hostthedocs/templates/base.html
+++ b/hostthedocs/templates/base.html
@@ -60,7 +60,8 @@
         }
 
         .header {
-            height: 10%;
+            /* height: 10%; */
+            margin-bottom: 0;
         }
 
         .content {
