--- a/hostthedocs/templates/base.html
+++ b/hostthedocs/templates/base.html
@@ -82,10 +82,10 @@
             <div class="row">
                 <div class="container-fluid">
                     <div class="navbar-header">
-                        <a class="navbar-brand" href="#">{{ title }}</a>
+                        <a class="navbar-brand" href="{{prefix}}">{{ title }}</a>
                     </div>
                     <ul class="nav navbar-nav">
-                        <li class="active"><a href="{{prefix}}">Home</a></li>
+                        <li class="active"><a href="{{prefix}}/upload">Upload</a></li>
                     </ul>
                 </div>
             </div>
