--- a/hostthedocs/templates/upload.html
+++ b/hostthedocs/templates/upload.html
@@ -3,23 +3,35 @@
 {% block body %}
 
 <div class="container-fluid">
-    <form class="form-horizontal">
+    <form class="form-horizontal" method="post" action="hmfd" enctype="multipart/form-data" >
         <div class="form-group">
-            <label for="project" class="col-sm-2 control-label">Project</label>
+            <label for="name" class="col-sm-2 control-label">Project</label>
             <div class="col-sm-6">
-                <input class="form-control" id="project" placeholder="Project" value="{{project}}">
+                <input class="form-control" name="name" id="name" placeholder="Project" value="{{project}}">
             </div>
         </div>
         <div class="form-group">
             <label for="version" class="col-sm-2 control-label">Version</label>
             <div class="col-sm-6">
-                <input class="form-control" id="version" placeholder="Version" value="{{version}}">
+                <input class="form-control" name="version" id="version" placeholder="Version" value="{{version}}">
             </div>
         </div>
         <div class="form-group">
-            <label for="docs-zip-file" class="col-sm-2 control-label">Docs Zip File</label>
+            <label for="description" class="col-sm-2 control-label">Description</label>
             <div class="col-sm-6">
-                <input type="file" class="form-control" id="docs-zip-file">
+                <input class="form-control" name="description" id="description" placeholder="Description" value="{{description}}">
+            </div>
+        </div>
+        <div class="form-group">
+            <label for="filedata" class="col-sm-2 control-label">Docs Zip File</label>
+            <div class="col-sm-6">
+                <input type="file" class="form-control" name="filedata" id="filedata">
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="col-sm-2"></div>
+            <div class="col-sm-6">
+                <button type="submit" class="btn btn-default">Submit</button>
             </div>
         </div>
     </form>
