redirect to newly uploaded version on success

--- a/hostthedocs/templates/upload.html
+++ b/hostthedocs/templates/upload.html
@@ -3,7 +3,7 @@
 {% block body %}
 
 <div class="container-fluid">
-    <form class="form-horizontal" method="post" action="hmfd" enctype="multipart/form-data" >
+    <form class="form-horizontal" method="post" enctype="multipart/form-data" >
         <div class="form-group">
             <label for="name" class="col-sm-2 control-label">Project</label>
             <div class="col-sm-6">
