link to latest in nav is working

--- a/hostthedocs/templates/base.html
+++ b/hostthedocs/templates/base.html
@@ -85,7 +85,18 @@
                         <a class="navbar-brand" href="{{prefix}}">{{ title }}</a>
                     </div>
                     <ul class="nav navbar-nav">
-                        <li class="active"><a href="{{prefix}}/upload">Upload</a></li>
+                        <li><a href="{{prefix}}/upload">Upload</a></li>
+                        <!-- <li><a href="{{prefix}}/delete">Delete</a></li> -->
+                        <li role="presentation" class="dropdown">
+                            <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
+                                Docs <span class="caret"></span>
+                            </a>
+                            <ul class="dropdown-menu">
+                                {% for project in projects %}
+                                <li><a href="{{prefix}}/{{project.name}}/latest/">{{ project.name }}</a></li>
+                                {% endfor %}
+                            </ul>
+                        </li>
                     </ul>
                 </div>
             </div>
